--- a/theme/src/scss/main/general/global.scss
+++ b/theme/src/scss/main/general/global.scss
@@ -1,6 +1,9 @@
 // =========================================================
-// t3kit print styles =====================================
+// t3kit global styles =====================================
 // =========================================================
+
+
+
 
 // =========================================================
 // =========================================================
