--- a/theme/src/scss/bootstrap/_index.scss
+++ b/theme/src/scss/bootstrap/_index.scss
@@ -1,49 +1,49 @@
 // Import project variables on top of Bootstrap to override default theme
-@import '../variables';
+@import 'variables';
 
 // Bootstrap Configuration
 @import "../../../../node_modules/bootstrap/scss/mixins";
 @import "../../../../node_modules/bootstrap/scss/utilities";
 
-// Bootstrap root
-@import "../../../../node_modules/bootstrap/scss/root";
-
 // Bootstrap reboot
 @import "../../../../node_modules/bootstrap/scss/reboot";
 
-// Bootstrap Content
-@import "../../../../node_modules/bootstrap/scss/type";
-@import "../../../../node_modules/bootstrap/scss/images";
-@import "../../../../node_modules/bootstrap/scss/tables";
-
 // Bootstrap Grid
-@import "../../../../node_modules/bootstrap/scss/grid";
 @import "../../../../node_modules/bootstrap/scss/containers";
+@import "../../../../node_modules/bootstrap/scss/grid";
+
+// Bootstrap Helpers
+@import "../../../../node_modules/bootstrap/scss/helpers/clearfix";
+@import "../../../../node_modules/bootstrap/scss/helpers/embed";
+@import "../../../../node_modules/bootstrap/scss/helpers/position";
+@import "../../../../node_modules/bootstrap/scss/helpers/screenreaders";
+@import "../../../../node_modules/bootstrap/scss/helpers/stretched-link";
+@import "../../../../node_modules/bootstrap/scss/helpers/text-truncation";
+
+// Bootstrap Utilities
+// @import "../../../../node_modules/bootstrap/scss/utilities/api";
 
 // Bootstrap Components
+// @import "../../../../node_modules/bootstrap/scss/dropdown";
+// @import "../../../../node_modules/bootstrap/scss/buttons";
+// @import "../../../../node_modules/bootstrap/scss/nav";
+// @import "../../../../node_modules/bootstrap/scss/navbar";
+
 // @import "../../../../node_modules/bootstrap/scss/alert";
 // @import "../../../../node_modules/bootstrap/scss/badge";
-@import "../../../../node_modules/bootstrap/scss/breadcrumb";
+// @import "../../../../node_modules/bootstrap/scss/breadcrumb";
 // @import "../../../../node_modules/bootstrap/scss/button-group";
-@import "../../../../node_modules/bootstrap/scss/buttons";
 // @import "../../../../node_modules/bootstrap/scss/card";
 // @import "../../../../node_modules/bootstrap/scss/carousel";
 // @import "../../../../node_modules/bootstrap/scss/close";
-// @import "../../../../node_modules/bootstrap/scss/dropdown";
 // @import "../../../../node_modules/bootstrap/scss/forms";
-@import "../../../../node_modules/bootstrap/scss/list-group";
+// @import "../../../../node_modules/bootstrap/scss/list-group";
 // @import "../../../../node_modules/bootstrap/scss/modal";
-// @import "../../../../node_modules/bootstrap/scss/nav";
-// @import "../../../../node_modules/bootstrap/scss/navbar";
 // @import "../../../../node_modules/bootstrap/scss/pagination";
 // @import "../../../../node_modules/bootstrap/scss/popover";
 // @import "../../../../node_modules/bootstrap/scss/progress";
 // @import "../../../../node_modules/bootstrap/scss/spinners";
 // @import "../../../../node_modules/bootstrap/scss/toasts";
 // @import "../../../../node_modules/bootstrap/scss/tooltip";
-@import "../../../../node_modules/bootstrap/scss/transitions";
+// @import "../../../../node_modules/bootstrap/scss/transitions";
 
-// Bootstrap Helpers
-@import "../../../../node_modules/bootstrap/scss/helpers";
-// Bootstrap Utilities
-@import "../../../../node_modules/bootstrap/scss/utilities/api";
