--- a/theme/src/scss/main/nav/breadcrumb.scss
+++ b/theme/src/scss/main/nav/breadcrumb.scss
@@ -4,7 +4,7 @@
   padding: 0.5rem 1rem;
   margin-bottom: 1rem;
   list-style: none;
-  background-color: var(--t3-breadcrumb--bg);
+  background-color: var(--t3-breadcrumb-bg);
 }
 
 .breadcrumb-item {
@@ -18,10 +18,10 @@
 .breadcrumb-item + .breadcrumb-item:before {
   display: inline-block;
   padding-right: 0.5rem;
-  color: var(--t3-breadcrumb--color);
+  color: var(--t3-breadcrumb-color);
   content: "/";
 }
 
 .breadcrumb-item.active {
-  color: var(--t3-breadcrumb--active-color);
+  color: var(--t3-breadcrumb-active-color);
 }
