--- a/theme/src/scss/main/nav/scroll-to-top.scss
+++ b/theme/src/scss/main/nav/scroll-to-top.scss
@@ -8,12 +8,12 @@
 .scroll-to-top__link {
   margin-right: 3rem;
   padding: 0.6rem;
-  background-color: var(--t3-scroll-to-top--bg);
-  color: var(--t3-scroll-to-top--color);
+  background-color: var(--t3-scroll-to-top-bg);
+  color: var(--t3-scroll-to-top-color);
 }
 
 .scroll-to-top__link:hover {
-  color: var(--t3-scroll-to-top--hover-color);
+  color: var(--t3-scroll-to-top-hover-color);
 }
 
 // .scroll-to-top__icon-wrp {}
