--- a/theme/src/scss/root/root.scss
+++ b/theme/src/scss/root/root.scss
@@ -1,51 +1,38 @@
 // ==============================
 // t3kit variables
+// ==============================
 :root {
-  // main variables
+  // main color variables
+
+  // primary color
   --t3-primary: #59dbeb;
+  --t3-primary-hs: 187, 78%;
+  --t3-primary-l: 64%;
+
+  // secondary color
   --t3-secondary: #008292;
+  --t3-secondary-hs: 187, 100%;
+  --t3-secondary-l: 29%;
+
+  // light color
+  --t3-light: #f8f9fa;
+  --t3-light-hs: 210, 17%;
+  --t3-light-l: 98%;
+
+  // dark color
+  --t3-dark: #343a40;
+  --t3-dark-hs: 210, 10%;
+  --t3-dark-l: 23%;
+
+  // white/black color
   --t3-white: #fff;
   --t3-black: #000;
-  --t3-light: #f8f9fa;
-  --t3-dark: #343a40;
-  --t3-body--color: #1d1d1d;
-  --t3-body--bg: var(--t3-white);
-  --t3-body--font-size: 1rem;
-  --t3-border--color: #dee2e6;
 
-  // link
-  --t3-link--color: var(--t3-secondary);
-  --t3-link--hover-color: var(--t3-secondary);
-
-  // btn
-
-  // font
-  --t3-font--sans-serif: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  --t3-font--monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
-
-  // headings
-  // h1
-  --t3-h1--font-size-mobile: calc(1.375rem + 1.5vw);
-  --t3-h1--font-size: 2.5rem;
-
-  // h2
-  --t3-h2--font-size-mobile: calc(1.325rem + 0.9vw);
-  --t3-h2--font-size: 2rem;
-
-  // h3
-  --t3-h3--font-size-mobile: calc(1.3rem + 0.6vw);
-  --t3-h3--font-size: 1.75rem;
-
-  // h4
-  --t3-h4--font-size-mobile: calc(1.275rem + 0.3vw);
-  --t3-h4--font-size: 1.5rem;
-  --t3-h5--font-size: 1.25rem;
-  --t3-h6--font-size: 1rem;
-  --t3-headings--text-transform: none;
-  --t3-headings--color: var(--t3-body-color);
-
-  // caption
-  --t3-caption--color: #6c757d;
+  // main body variables
+  --t3-body-color: #1d1d1d;
+  --t3-body-bg: var(--t3-white);
+  --t3-body-font-size: 1rem;
+  --t3-border-color: #dee2e6;
 
   // overlay
   --t3-primary-overlay: rgba(89, 219, 235, 0.4);
@@ -53,41 +40,146 @@
   --t3-light-overlay: rgba(52, 58, 64, 0.4);
   --t3-dark-overlay: rgba(248, 249, 250, 0.4);
 
-  // ========================
-  // Navigation
-  // ========================
-  // breadcrumb
-  --t3-breadcrumb--color: var(--t3-link-color);
-  --t3-breadcrumb--bg: var(--t3-body-bg);
-  --t3-breadcrumb--active-color: var(--t3-body-color);
+  // input-focus
+  --t3-input-focus: 0 0 0 0.2rem rgba(211, 32, 39, 0.247);
 
-  // ========================
-  // Content elements
-  // ========================
-  // table
-  --t3-table--color: var(--t3-body-color);
-  --t3-table--border-color: var(--t3-border-color);
-  --t3-table--bg: transparent;
-  --t3-table--striped-bg: rgba(0, 0, 0, 0.05);
-  --t3-table--hover-bg: rgba(0, 0, 0, 0.05);
+  // _________________
+  // Typography
+  // -----------------
+  // font
+  --t3-font-sans-serif: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  --t3-font-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+  --t3-font-family-base: var(--t3-font-sans-serif);
 
-  // ========================
-  // Content elements
-  // ========================
+  // headings
+  --t3-headings-text-transform: none;
+  --t3-headings-color: var(--t3-body-color);
+  // should be the only number with pixels in mind. Will be converted to rem
+  --t3-h1-font-size: 40;
+  --t3-h2-font-size: 32;
+  --t3-h3-font-size: 28;
+  --t3-h4-font-size: 24;
+  --t3-h5-font-size: 20;
+  --t3-h6-font-size: 16;
 
-  // ========================
+  // link
+  --t3-link-color: var(--t3-secondary);
+  --t3-link-hover-color: var(--t3-secondary);
+
+  // caption
+  --t3-caption-color: #6c757d;
+
+
+  // _________________
   // Helpers
-  // ========================
+  // -----------------
+  // Border-radius
+  --t3-border-radius: 0.25rem;
+
+  // content-margins
+  --t3-ce-margin-5: 0.3125rem;
+  --t3-ce-margin-10: 0.625rem;
+  --t3-ce-margin-16: 1rem;
+  --t3-ce-margin-20: 1.25rem;
+  --t3-ce-margin-25: 1.55rem;
+  --t3-ce-margin-30: 1.875rem;
+  --t3-ce-margin-40: 2.5rem;
+  --t3-ce-margin-50: 3.125rem;
+  --t3-ce-margin-60: 3.75rem;
+  --t3-ce-margin-70: 4.375rem;
+
+  // Buttons
+  --t3-btn-text-decoration: none;
+  --t3-btn-font-size: 1rem;
+  --t3-btn-font-weight: 400;
+  --t3-btn-border-radius: 0.25rem;
+  --t3-btn-padding-top: 0.375rem;
+  --t3-btn-padding-left: 0.75rem;
+
+  // btn primary
+  --t3-btn-primary-bg-hs: var(--t3-primary-hs);
+  --t3-btn-primary-bg-l: var(--t3-primary-l);
+  --t3-btn-primary-bg: hsl(var(--t3-btn-primary-bg-hs), var(--t3-btn-primary-bg-l));
+  --t3-btn-primary-color: var(--t3-body-bg);
+  --t3-btn-primary-borber-color: hsl(var(--t3-btn-primary-bg-hs), var(--t3-btn-primary-bg-l));
+  --t3-btn-primary-hover-color: var(--t3-btn-primary-color);
+  --t3-btn-primary-hover-bg: hsl(var(--t3-btn-primary-bg-hs), calc(var(--t3-btn-primary-bg-l) - 8%));
+  --t3-btn-primary-hover-border-color: hsl(var(--t3-btn-primary-bg-hs), calc(var(--t3-btn-primary-bg-l) - 10%));
+  --t3-btn-primary-active-color: var(--t3-btn-primary-color);
+  --t3-btn-primary-active-bg: hsl(var(--t3-btn-primary-bg-hs), calc(var(--t3-btn-primary-bg-l) - 10%));
+  --t3-btn-primary-active-border-color: hsl(var(--t3-btn-primary-bg-hs), calc(var(--t3-btn-primary-bg-l) - 13%));
+
+  // btn secondary
+  --t3-btn-secondary-bg-hs: var(--t3-secondary-hs);
+  --t3-btn-secondary-bg-l: var(--t3-secondary-l);
+  --t3-btn-secondary-bg: hsl(var(--t3-btn-secondary-bg-hs), var(--t3-btn-secondary-bg-l));
+  --t3-btn-secondary-color: var(--t3-body-bg);
+  --t3-btn-secondary-borber-color: hsl(var(--t3-btn-secondary-bg-hs), var(--t3-btn-secondary-bg-l));
+  --t3-btn-secondary-hover-color: var(--t3-btn-secondary-color);
+  --t3-btn-secondary-hover-bg: hsl(var(--t3-btn-secondary-bg-hs), calc(var(--t3-btn-secondary-bg-l) - 8%));
+  --t3-btn-secondary-hover-border-color: hsl(var(--t3-btn-secondary-bg-hs), calc(var(--t3-btn-secondary-bg-l) - 10%));
+  --t3-btn-secondary-active-color: var(--t3-btn-secondary-color);
+  --t3-btn-secondary-active-bg: hsl(var(--t3-btn-secondary-bg-hs), calc(var(--t3-btn-secondary-bg-l) - 10%));
+  --t3-btn-secondary-active-border-color: hsl(var(--t3-btn-secondary-bg-hs), calc(var(--t3-btn-secondary-bg-l) - 13%));
+
+  // btn light
+  --t3-btn-light-bg-hs: var(--t3-light-hs);
+  --t3-btn-light-bg-l: var(--t3-light-l);
+  --t3-btn-light-bg: hsl(var(--t3-btn-light-bg-hs), var(--t3-btn-light-bg-l));
+  --t3-btn-light-color: var(--t3-body-color);
+  --t3-btn-light-borber-color: hsl(var(--t3-btn-light-bg-hs), var(--t3-btn-light-bg-l));
+  --t3-btn-light-hover-color: var(--t3-btn-light-color);
+  --t3-btn-light-hover-bg: hsl(var(--t3-btn-light-bg-hs), calc(var(--t3-btn-light-bg-l) - 8%));
+  --t3-btn-light-hover-border-color: hsl(var(--t3-btn-light-bg-hs), calc(var(--t3-btn-light-bg-l) - 10%));
+  --t3-btn-light-active-color: var(--t3-btn-light-color);
+  --t3-btn-light-active-bg: hsl(var(--t3-btn-light-bg-hs), calc(var(--t3-btn-light-bg-l) - 10%));
+  --t3-btn-light-active-border-color: hsl(var(--t3-btn-light-bg-hs), calc(var(--t3-btn-light-bg-l) - 13%));
+
+  // btn dark
+  --t3-btn-dark-bg-hs: var(--t3-dark-hs);
+  --t3-btn-dark-bg-l: var(--t3-dark-l);
+  --t3-btn-dark-bg: hsl(var(--t3-btn-dark-bg-hs), var(--t3-btn-dark-bg-l));
+  --t3-btn-dark-color: var(--t3-body-bg);
+  --t3-btn-dark-borber-color: hsl(var(--t3-btn-dark-bg-hs), var(--t3-btn-dark-bg-l));
+  --t3-btn-dark-hover-color: var(--t3-btn-dark-color);
+  --t3-btn-dark-hover-bg: hsl(var(--t3-btn-dark-bg-hs), calc(var(--t3-btn-dark-bg-l) - 8%));
+  --t3-btn-dark-hover-border-color: hsl(var(--t3-btn-dark-bg-hs), calc(var(--t3-btn-dark-bg-l) - 10%));
+  --t3-btn-dark-active-color: var(--t3-btn-dark-color);
+  --t3-btn-dark-active-bg: hsl(var(--t3-btn-dark-bg-hs), calc(var(--t3-btn-dark-bg-l) - 10%));
+  --t3-btn-dark-active-border-color: hsl(var(--t3-btn-dark-bg-hs), calc(var(--t3-btn-dark-bg-l) - 13%));
+
+
+  // _________________
+  // Navigation
+  // -----------------
+  // side-navigation
+
+  // breadcrumb
+  --t3-breadcrumb-color: var(--t3-link-color);
+  --t3-breadcrumb-bg: var(--t3-body-bg);
+  --t3-breadcrumb-active-color: var(--t3-body-color);
+
   // skip-links
-  --t3-skip-link--bg: var(--t3-body--bg);
+  --t3-skip-link-bg: var(--t3-body-bg);
 
   // scroll-to-top
-  --t3-scroll-to-top--color: var(--t3-body--bg);
-  --t3-scroll-to-top--bg: var(--t3-link--color);
-  --t3-scroll-to-top--hover-color: #9998;
+  --t3-scroll-to-top-color: var(--t3-body-bg);
+  --t3-scroll-to-top-bg: var(--t3-link-color);
+  --t3-scroll-to-top-hover-color: #9998;
 
   // target-blank-link
-  --t3-target-blank-msg--color: var(--t3-body--color);
-  --t3-target-blank-msg--bg: var(--t3-body--bg);
+  --t3-target-blank-msg-color: var(--t3-body-color);
+  --t3-target-blank-msg-bg: var(--t3-body-bg);
+
+  // _________________
+  // Content elements
+  // -----------------
+  // Table
+  --t3-table-color: var(--t3-body-color);
+  --t3-table-border-color: var(--t3-border-color);
+  --t3-table-bg: transparent;
+  --t3-table-striped-color: var(--t3-table-color);
+  --t3-table-striped-bg: rgba(0, 0, 0, 0.05);
+  --t3-table-hover-color: var(--t3-table-color);
+  --t3-table-hover-bg: rgba(0, 0, 0, 0.075);
 }
-// ==============================
